--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="story">История</string>
     <string name="post">Запись</string>
     <string name="what_is_new">Что у Вас нового?</string>
+    <string name="send">Отправить</string>
 </resources>
