Show stickers dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="post">Запись</string>
     <string name="what_is_new">Что у Вас нового?</string>
     <string name="send">Отправить</string>
+    <string name="stickers">Стикеры</string>
+
+
+
 </resources>
